Made some tests pass Transitions between branches still don't work. Taking off for the weekend...

--- a/objectflow.stateful/objectflow.stateful.csproj
+++ b/objectflow.stateful/objectflow.stateful.csproj
@@ -59,6 +59,7 @@
     <Compile Include="StatefulWorkflow.cs" />
     <Compile Include="StatefulWorkflowExtensions.cs" />
     <Compile Include="Transition.cs" />
+    <Compile Include="UnallowedTransitionException.cs" />
     <Compile Include="WorkflowFactory.cs" />
   </ItemGroup>
   <ItemGroup>
