--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -60,6 +60,7 @@
     <Compile Include="PossibleTransitions\GivenBranchesAndYields.cs" />
     <Compile Include="PossibleTransitions\GivenOnlyBranches.cs" />
     <Compile Include="PossibleTransitions\GivenOnlyYields.cs" />
+    <Compile Include="TransitionGateways\WhenTransitionIsBlocked.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NunitExtensions\NunitExtensions.csproj">
