Added error handling to enable transitions Error handling is still not fluent, but can be handled per entire workflow. Transitions now also work fully on a brittle level. It's quite possible that there are still a number of bugs in this whole module.

--- a/objectflow.core/objectflow.core.csproj
+++ b/objectflow.core/objectflow.core.csproj
@@ -103,6 +103,8 @@
     </Compile>
     <Compile Include="Constraints\BranchCondition.cs" />
     <Compile Include="Engine\DeclaredOperation.cs" />
+    <Compile Include="Framework\FaultHandler.cs" />
+    <Compile Include="Engine\IFaultHandler.cs" />
     <Compile Include="Framework\AsAWorkflow.cs" />
     <Compile Include="Helpers\Declare.cs" />
     <Compile Include="Interfaces\IConfigureSequence.cs" />
