--- a/objectflow.stateful/objectflow.stateful.csproj
+++ b/objectflow.stateful/objectflow.stateful.csproj
@@ -56,7 +56,7 @@
     <Compile Include="ITransitionGateway.cs" />
     <Compile Include="IWorkflowFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StatefulFaultHandler.cs" />
+    <Compile Include="StatefulErrorHandler.cs" />
     <Compile Include="StatefulWorkflow.cs" />
     <Compile Include="StatefulWorkflowExtensions.cs" />
     <Compile Include="Transition.cs" />
