Added a GetPossibleTransitions method to IWOrkflowFactory This expands the ability the workflow factory so that usage throughout most code is even simpler. Once the workflow is defined, the UI can query the workflow to see what it's allowed to do next.

--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
+    <Compile Include="PossibleTransitions\FactoryWantsTransitions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatefulWorkflows\WhenStartingFromScratch.cs" />
     <Compile Include="PossibleTransitions\GivenBranchesAndYields.cs" />
