--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -49,13 +49,13 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
     <Compile Include="PossibleTransitions\FactoryWantsTransitions.cs" />
+    <Compile Include="PossibleTransitions\WhenObjectCanGoManyWays.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatefulWorkflows\WhenStartingFromScratch.cs" />
     <Compile Include="PossibleTransitions\GivenBranchesAndYields.cs" />
