--- a/objectflow.core.tests/objectflow.core.tests.unit.csproj
+++ b/objectflow.core.tests/objectflow.core.tests.unit.csproj
@@ -85,6 +85,8 @@
     <Compile Include="ParallelSplit\WhenDefiningParallelWorkflows.cs" />
     <Compile Include="ParallelSplit\WhenParallisingOperations.cs" />
     <Compile Include="ObjectCreation\WhenRegisteringTypeSpec.cs" />
+    <Compile Include="Parameters\WhenExecuting.cs" />
+    <Compile Include="Parameters\WhenSettingParameters.cs" />
     <Compile Include="Policy\FailOnceOperation.cs" />
     <Compile Include="Policy\WhenRetryingFunctions.cs" />
     <Compile Include="Policy\WhenBuildingRetry.cs" />
