--- a/objectflow.core/objectflow.core.csproj
+++ b/objectflow.core/objectflow.core.csproj
@@ -96,6 +96,8 @@
     <Compile Include="Constraints\BranchCondition.cs" />
     <Compile Include="Engine\DeclaredOperation.cs" />
     <Compile Include="Engine\BuilderActivators.cs" />
+    <Compile Include="Engine\ParameterizedFunctionInvoker.cs" />
+    <Compile Include="Engine\ParameterizedOperationDuplex.cs" />
     <Compile Include="Framework\ErrorHandler.cs" />
     <Compile Include="Interfaces\IErrorHandler.cs" />
     <Compile Include="Framework\AsAWorkflow.cs" />
