parametarized workflows work now

--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
+    <Compile Include="Parameters\WithParameters.cs" />
     <Compile Include="PossibleTransitions\FactoryWantsTransitions.cs" />
     <Compile Include="PossibleTransitions\WhenObjectCanGoManyWays.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
