--- a/objectflow.stateful/objectflow.stateful.csproj
+++ b/objectflow.stateful/objectflow.stateful.csproj
@@ -47,12 +47,14 @@
     <Compile Include="IStatefulWorkflow.cs" />
     <Compile Include="ITransition.cs" />
     <Compile Include="ITransitionGateway.cs" />
+    <Compile Include="ITransitionRule.cs" />
     <Compile Include="IWorkflowMediator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatefulErrorHandler.cs" />
     <Compile Include="StatefulWorkflow.cs" />
     <Compile Include="StatefulWorkflowExtensions.cs" />
     <Compile Include="Transition.cs" />
+    <Compile Include="DefaultTransitionRule.cs" />
     <Compile Include="UnallowedTransitionException.cs" />
     <Compile Include="WorkflowMediator.cs" />
   </ItemGroup>
