--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -57,6 +57,10 @@
     <Compile Include="PossibleTransitions\GivenOnlyYields.cs" />
     <Compile Include="TransitionGateways\WhenReceivingTransitionsToEvaluate.cs" />
     <Compile Include="TransitionGateways\WhenTransitionIsBlocked.cs" />
+    <Compile Include="TransitionRulesWithWorkflow\TestFixtures.cs" />
+    <Compile Include="TransitionRulesWithWorkflow\WhenBeginningAWorkflow.cs" />
+    <Compile Include="TransitionRulesWithWorkflow\WhenExitingAWorkflow.cs" />
+    <Compile Include="TransitionRulesWithWorkflow\WhenTransitioningBetweenWorkflowStates.cs" />
     <Compile Include="TransitionRules\WhenBeginningAWorkflow.cs" />
     <Compile Include="TransitionRules\WhenEndingAWorkflow.cs" />
     <Compile Include="TransitionRules\WhenTransitioningBetweenStates.cs" />
