Refactored StatefulWorkflow to separate logic from API
I'm in the process of revamping the order that branches work, so there's a handful of completely bombing tests. I think it's important, though, that I get the repo into a relatively building state before ripping it apart again

--- a/objectflow.stateful/objectflow.stateful.csproj
+++ b/objectflow.stateful/objectflow.stateful.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ITransitionRule.cs" />
     <Compile Include="IWorkflowMediator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatefulBuilder.cs" />
     <Compile Include="StatefulErrorHandler.cs" />
     <Compile Include="StatefulWorkflow.cs" />
     <Compile Include="StatefulWorkflowExtensions.cs" />
