Expanded error handling capabilities
Added a `Strict` property to easily make errors throw through. I'm contemplating making this default behavior

--- a/objectflow.core/objectflow.core.csproj
+++ b/objectflow.core/objectflow.core.csproj
@@ -98,7 +98,7 @@
     <Compile Include="Engine\BuilderActivators.cs" />
     <Compile Include="Engine\ParameterizedFunctionInvoker.cs" />
     <Compile Include="Engine\ParameterizedOperationDuplex.cs" />
-    <Compile Include="Framework\ErrorHandler.cs" />
+    <Compile Include="Framework\DefaultErrorHandler.cs" />
     <Compile Include="Interfaces\IErrorHandler.cs" />
     <Compile Include="Framework\AsAWorkflow.cs" />
     <Compile Include="Helpers\Declare.cs" />
