--- a/objectflow.stateful/objectflow.stateful.csproj
+++ b/objectflow.stateful/objectflow.stateful.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelperExtensions.cs" />
     <Compile Include="IStatefulObject.cs" />
     <Compile Include="IStatefulWorkflow.cs" />
     <Compile Include="IStateObserver.cs" />
