Fixed a bug where security was using the current state instead of the originating state
fixes #4

--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -56,6 +56,7 @@
     <Compile Include="PossibleTransitions\GivenBranchesAndYields.cs" />
     <Compile Include="PossibleTransitions\GivenOnlyBranches.cs" />
     <Compile Include="PossibleTransitions\GivenOnlyYields.cs" />
+    <Compile Include="TransitionGateways\WhenChangingStateMidTransition.cs" />
     <Compile Include="TransitionGateways\WhenReceivingTransitionsToEvaluate.cs" />
     <Compile Include="TransitionGateways\WhenTransitionIsBlocked.cs" />
     <Compile Include="TransitionRulesWithWorkflow\TestFixtures.cs" />
