first clean implementation of `If()`.
After talking with Erik, I think we're going to replace `When`/`Unless` since this is a more fluent concept

--- a/objectflow.stateful/objectflow.stateful.csproj
+++ b/objectflow.stateful/objectflow.stateful.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Framework\AbstractBranchingCondition.cs" />
+    <Compile Include="Framework\AdvancedBranchingExpression.cs" />
     <Compile Include="Framework\BranchingExpression.cs" />
     <Compile Include="DefaultTransitionGateway.cs" />
     <Compile Include="HelperExtensions.cs" />
