--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BreakingConditions\WhenBranching.cs" />
     <Compile Include="BreakingConditions\WhenBreakingOutOfWorkflow.cs" />
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
     <Compile Include="Parameters\WithParameters.cs" />
