--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="BreakingConditions\WhenBranching.cs" />
     <Compile Include="BreakingConditions\WhenBreakingOutOfWorkflow.cs" />
+    <Compile Include="BreakingConditions\WhenBreakingWithStatus.cs" />
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
     <Compile Include="Parameters\WithParameters.cs" />
     <Compile Include="PossibleTransitions\FactoryWantsTransitions.cs" />
