Accomodated PossibleTransitions with the .BreakWithStatus concept
This allows security to hook in better as well as our UI hooks

--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
     <Compile Include="Parameters\WithParameters.cs" />
     <Compile Include="PossibleTransitions\FactoryWantsTransitions.cs" />
+    <Compile Include="PossibleTransitions\WhenGivenBreakWithStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatefulWorkflows\WhenStartingFromScratch.cs" />
     <Compile Include="PossibleTransitions\GivenBranchesAndYields.cs" />
