--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -51,6 +51,7 @@
     <Compile Include="BreakingConditions\WhenBreakingOutOfWorkflow.cs" />
     <Compile Include="BreakingConditions\WhenBreakingWithStatus.cs" />
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
+    <Compile Include="InnerCodeBlocks\WhenUsingSimpleBlocks.cs" />
     <Compile Include="Parameters\WithParameters.cs" />
     <Compile Include="PossibleTransitions\FactoryWantsTransitions.cs" />
     <Compile Include="PossibleTransitions\WhenGivenBreakWithStatus.cs" />
